<resources>
    <string name="app_name">groupr</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_first_page">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Entered password is incorrect</string>
    <string name="error_field_required">Required field</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="username">Username</string>



    <!-- Register Fragment -->
    <string name="passwords_not_match">Passwords do not match!</string>
    <string name="complete">Please complete</string>

    <!-- Error Handling -->
    <string name="error_user_exists">Email in use!</string>
    <string name="error_weak_password">Weak password entered. Try to use symbols (.,/ etc.) and numbers(0,1,2,3 etc.)!</string>
    <string name="group_id">Group ID</string>
    <string name="error_user_not_found">User not found!</string>

    <!-- Group Fragment -->
    <string name="join_group">Join Group</string>
    <string name="new_group">New Group</string>
    <string name="my_groups">My Groups</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_group">Create Group</string>
    <string name="enter_group_name">Enter Group Name...</string>
    <string name="successfully_created">New Group has been succesfully initialized</string>
    <string name="group_name">Group Name</string>
    <string name="group_members">Group Members</string>
    <string name="all_groups">All Groups</string>
    <string name="no_internet">No connection</string>
    <string name="cancel_new_group">Group Creation has been cancelled</string>
    <string name="check_internet">Please check your connection!</string>
    <string name="no_photo">No photo chosen!</string>
</resources>
